# oracle

./: .gitignore  LICENSE  README.md  analysis.ipynb  app.py  dashboard.py  marimo.py  model_pipeline.py  plot.py  pyproject.toml  requirements.txt  snowpilot.py
.streamlit/: config.toml
data/: cumulative.txt  probability.txt  snowpilot_psts.pkl
data/plots/: cdf.txt  histogram.txt  pdf.txt
data/slf/: 002.txt  003.txt  004.txt  005.txt  008.txt  009.txt  020.txt  031.txt  037.txt  041.txt  043.txt  050.txt  052.txt  053.txt  056.txt  059.txt  061.txt  068.txt  070.txt  073.txt  074.txt  075.txt  076.txt  077.txt  078.txt  080.txt  081.txt  086.txt  088.txt  090.txt  093.txt  097.txt  104.txt  112.txt  113.txt  114.txt  115.txt  122.txt  125.txt  128.txt  (+53 more)
data/snowpilot/: psts.pkl  snowpilot_page_0.xml  snowpilot_page_1.xml  snowpilot_page_10.xml  snowpilot_page_11.xml  snowpilot_page_12.xml  snowpilot_page_13.xml  snowpilot_page_14.xml  snowpilot_page_15.xml  snowpilot_page_16.xml  snowpilot_page_17.xml  snowpilot_page_18.xml  snowpilot_page_19.xml  snowpilot_page_2.xml  snowpilot_page_20.xml  snowpilot_page_21.xml  snowpilot_page_22.xml  snowpilot_page_23.xml  snowpilot_page_24.xml  snowpilot_page_25.xml  snowpilot_page_26.xml  snowpilot_page_27.xml  snowpilot_page_28.xml  snowpilot_page_29.xml  snowpilot_page_3.xml  snowpilot_page_30.xml  snowpilot_page_31.xml  snowpilot_page_32.xml  snowpilot_page_33.xml  snowpilot_page_34.xml  snowpilot_page_35.xml  snowpilot_page_36.xml  snowpilot_page_37.xml  snowpilot_page_38.xml  snowpilot_page_39.xml  snowpilot_page_4.xml  snowpilot_page_40.xml  snowpilot_page_41.xml  snowpilot_page_42.xml  snowpilot_page_43.xml  (+29 more)
data/vanherwijnen2016/: 006.txt  010.txt  017.txt  028.txt  035.txt  036.txt  038.txt  049.txt  054.txt  084.txt  085.txt  091.txt  094.txt  109.txt  110.txt  131.txt  170.txt  183.txt  209.txt  227.txt  231.txt  242.txt  248.txt  (+2 more)
layouts/: app.grid.json  dashboard.grid.json
oracle/: __init__.py  config.py  plot.py  pst.py  requirements.txt  slf.py  snowpilot.py
styles/: atomize.mplstyle  omnidracula.mplstyle
(+68 files in other folders)
