[build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta"
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "oracle"
version = "0.1.0"
description = "Observation, Research, and Analysis of Collapse and Loading Experiments"
authors = [
    { name = "Philipp Rosendahl", email = "rosendahl@ismd.tu-darmstadt.de" },
    { name = "Valentin Adam", email = "adam@ismd.tu-darmstadt.de" },
]
readme = "README.md"
license = { text = "CC BY-NC-SA 4.0" }
requires-python = ">=3.10"

[project.urls]
"Source" = "https://github.com/2phi/oracle"

[tool.setuptools.packages.find]
where = ["oracle"]

[tool.poetry]
name = "oracle"
version = "0.1.0"
description = "Observation, Research, and Analysis of Collapse and Loading Experiments"
authors = [
    "Philipp Rosendahl <rosendahl@ismd.tu-darmstadt.de>",
    "Valentin Adam <adam@ismd.tu-darmstadt.de>",
]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "8.12.3"
matplotlib = "3.9.2"
numpy = "2.1.1"
pandas = "2.2.2"
plotly = "5.24.1"
python-dotenv = "1.0.1"
requests = "2.32.3"
scipy = "1.14.1"
streamlit = "1.38.0"
streamlit-browser-session-storage = "0.0.11"
streamlit-local-storage = "0.0.24"
streamlit-screen-stats = "0.0.77"
tqdm = "4.66.4"
weac = "2.5.2"
